// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultichainBridgeQuoteCard should not render when there is a quote fetch error 1`] = `<div />`;

exports[`MultichainBridgeQuoteCard should not render when there is no quote 1`] = `<div />`;

exports[`MultichainBridgeQuoteCard should render a quote with MM fee 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          (0:30)
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 USDC = &lt;0.000001 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="network-fees"
      >
        $2.52
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          undefined%
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      />
    </div>
  </div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-center mm-box--align-items-center"
  >
    <p
      class="mm-box mm-text mm-text--body-xs mm-box--color-text-alternative-soft"
    >
      Includes 0.875% MM fee. Approves token for bridge.
    </p>
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--display-flex"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
          style="mask-image: url('./images/icons/info.svg');"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultichainBridgeQuoteCard should render the recommended quote (no MM fee) 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          (0:30)
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 USDC = 0.999 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="network-fees"
      >
        $2.52
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          undefined%
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      />
    </div>
  </div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-center mm-box--align-items-center"
  >
    <p
      class="mm-box mm-text mm-text--body-xs mm-box--color-text-alternative-soft"
    >
      Approves token for bridge.
    </p>
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--display-flex"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
          style="mask-image: url('./images/icons/info.svg');"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultichainBridgeQuoteCard should render the recommended quote while loading new quotes 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-warning-default"
        >
          (0:05)
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 ETH = 2,444 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="network-fees"
      >
        $2.52
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1%
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      >
        $14.29
      </p>
    </div>
  </div>
</div>
`;
